--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "eslint": "^8.17.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
