--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "TSC_COMPILE_ON_ERROR=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
